--- a/Finance/Finance/Properties/Resources.resx
+++ b/Finance/Finance/Properties/Resources.resx
@@ -121,13 +121,25 @@
   <data name="if_revisi_01_2191536" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_revisi_01_2191536.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="if_double-arrow-left_383152" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_double-arrow-left_383152.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="if_Login Manager_7261" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_Login Manager_7261.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_icon-ios7-arrow-left_211689" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_icon-ios7-arrow-left_211689.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_double-arrow-right_383079 (1)" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_double-arrow-right_383079 (1).png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="if_Login_49249" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_Login_49249.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="if_new10_216291" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\if_new10_216291.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="if_icon-ios7-arrow-right_211607" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\if_icon-ios7-arrow-right_211607.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
